fix hero image overflow

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -16,6 +16,7 @@ a {
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    display: block;
   }
 }
 
